src/pages/index.scss
div {
  outline: 1px solid red;
}

:root {
  --landscape-width: 25vw;
  --portrait-width: 80vw;
  --header-height: 4rem;
  --secs: 0.4s;
  --bg-left: springgreen;
  --bg-right: cyan;
  --bg-main: lemonchiffon;
}

body {
  min-height: 100vh;
  max-width: 100vw;
  margin: 0;
  overflow: hidden; // Disable scrolling on body
}

// Flexbox definition:
#layout { display: flex; }

// Main area specific style:
#main { background: var(--bg-main);
  .header { background: linear-gradient(to right, var(--bg-left), var(--bg-right));
    @media (orientation: landscape) {
      .title { transition: left var(--secs), right var(--secs);
        &.left-closed { left: var(--header-height); }
        &.right-closed { right: var(--header-height); }
      }
    }
  }
}

// Left sidebar specific style:
#left { z-index: 5;
  .sidebar { background: var(--bg-left);
    &.closed { transform: translateX(-100%); } // <-- Left portrait AND landscape!
    .header { left: var(--header-height); }
  }
}

// Right sidebar specific style:
#right { .icon { right: 0; }
  .sidebar { background: var(--bg-right);
    @media (orientation: portrait) {
      &.open { transform: translateX(-100%); }
    } // <--^ Right portrait sidebar ONLY!
  }
}

// Style in common for both sidebars:
#left, #right { transition: min-width var(--secs);
  min-width: 0; width: 0;
  @media (orientation: landscape) {
    &.open { min-width: var(--landscape-width);
      overflow: hidden; // For overflow on window resize!
    }
  } // <--^ Landscape ONLY sidebars
  .icon { position: fixed; z-index: 10;
    width: var(--header-height); height: var(--header-height);
    line-height: var(--header-height); font-size: var(--header-height);
    text-align: center; user-select: none; cursor: pointer;
  }
  .sidebar { transition: transform var(--secs); // <-- Portrait AND landscape!
    @media (orientation: portrait) { width: var(--portrait-width); }
    @media (orientation: landscape) { width: var(--landscape-width);
      &.open { min-width: inherit; }
    }
    .header { width: calc(100% - var(--header-height)); }
  }
}

// Style in common for sidebars and main area:
.header { position: relative;
  height: var(--header-height);
  text-align: center; // Horizontal center
  .title { position: absolute; left: 0; right: 0; }
}
.content { height: 100vh; padding: 1rem; }

